...
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/content_description_trackers_blocked"
            android:src="@drawable/ic_trackers_blocked" />

        <TextView
            android:id="@+id/trackers_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="12sp"
...

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/blocking_switch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tracking_protection_toggle_title"
            android:layout_width="match_parent"
...
