...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp">

        <ImageButton
            android:id="@+id/menuView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_menu"
            android:src="@drawable/ic_menu" />

        <!-- Block icon to indicate blocking has been turned off -->
        <FrameLayout
            android:id="@+id/block"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="top|end|center"
            android:layout_marginEnd="4dp"
            android:background="@drawable/purple_badge_background"
            android:visibility="gone">
...
