...
    <string name="preference_autocomplete_add_example">Example: example.com</string>

    <!-- Confirmation "snackbar" shown after a new custom autocomplete URL has been added. -->
    <string name="preference_autocomplete_add_confirmation">New custom URL added.</string>

    <!-- Menu item to remove existing autocomplete URLs. -->
    <string name="preference_autocomplete_menu_remove">Remove</string>

    <!-- Content description (not visible, for screen readers etc.): Button that will delete all selected custom autocomplete URLs. -->
    <string name="preference_autocomplete_action_remove_content_description">Remove</string>

    <!-- Error message shown if the entered custom autocomplete URL is not valid or empty. -->
    <string name="preference_autocomplete_add_error">Double-check the URL you entered.</string>
...
    <!-- Title of the preference to enable "HTTPS-Only" mode -->
    <string name="preference_https_only_title">HTTPS-Only Mode</string>
    <!-- Description of the preference to enable "HTTPS-Only" mode. -->
    <string name="preference_https_only_summary3">Automatically attempts to connect to sites using the HTTPS encryption protocol for increased security.</string>

    <!-- Preference for exceptions tracking protection -->
    <string name="preference_exceptions">Exceptions</string>
    <!-- Description for the exceptions preference screen-->
    <string name="preference_exceptions_description">You have disabled content blocking for these websites.</string>
    <!-- Menu item to remove existing exceptions. -->
    <string name="preference_exceptions_menu_remove">Remove</string>
    <!-- Button to remove all websites from the exception list -->
    <string name="preference_exceptions_remove_all_button_label">Remove all websites</string>
...
